--- a/index.html
+++ b/index.html
@@ -8,26 +8,60 @@
     <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title>Brunateste</title>
+    <title>BrunaStudio</title>
 </head>
 <body>
     
 
 <div class="container">
+
+    <div class="menu1">
+
+
+<div class="line" id="line2"></div>
+<div class="line" id="line3"></div>
+<div class="line" id="line4"></div>
+<div class="line" id="line5"></div>
+<span>Fechar</span>
+
+ </div>
+
+
 <header>
     <div class="img-wrapper">
     <img src="imagens/Capa.jpg" alt="">
     </div>
    <div class="banner">
-    <h1>Ateliê Bruna Ferreira</h1>
+    <h1>Studio Bruna Ferreira</h1>
     <p>Especialista em Designer e Micropigmentação de Sobrancelhas.</p>
     <button>Saiba mais</button>
 </div>
 </header>
 
+<div class="sidebar">
+<nav>
+<ul class="menu2">
+<li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+<li class="menu-item"><a href="#" class="menu-link">Fotos</a></li>
+<li class="menu-item"><a href="#" class="menu-link">Vídeos</a></li>
+<li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+</ul>
+</nav>
+
+<div class="social-media">
+    
+    <a href="#"><i class="fab fa-instagram "></i></a>
+    <a href="#"><i class="fab fa-whatsapp "></i></a>
+
+
+
+
+</div>
+</div>
 </div>
 
 
-
 </body>
+<script src="script.js"></script>
+
 </html>
