--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-
-
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="imagens/sobrancelha.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
@@ -15,19 +12,14 @@
 </head>
 <body>
     
-
 <div class="container">
-
-    <div class="menu1">
-
-
+<div class="menu1">
 <div class="line" id="line2"></div>
 <div class="line" id="line3"></div>
 <div class="line" id="line4"></div>
 <div class="line" id="line5"></div>
 <span>Fechar</span>
-
- </div>
+</div>
 
 
 <header>
@@ -41,30 +33,98 @@
 </div>
 </header>
 
-<div class="sidebar">
+<aside class="sidebar">
 <nav>
 <ul class="menu2">
 <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
 <li class="menu-item"><a href="#" class="menu-link">Fotos</a></li>
 <li class="menu-item"><a href="#" class="menu-link">Vídeos</a></li>
-<li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+<li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
 </ul>
 </nav>
 
 <div class="social-media">
-    
     <a href="#"><i class="fab fa-instagram "></i></a>
     <a href="#"><i class="fab fa-whatsapp "></i></a>
+</div>
+</aside>
 
-
-
-
+<section class="sessao-conhecimentos">
+<div class="sessao-header">
+    <h1>Conhecimentos</h1>
+</div>
+<div class="conhecimentos">
+<div class="conhecimento">
+<div class="conhecimento-header">
+    <i class="fab fa-html5"></i>
+    <h3>HTML</h3>
+</div>
+<div class="conhecimento-text">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, est quia architecto
+     doloremque voluptatum eius repellendus minus totam fugit corrupti accusamus blanditiis saepe nobis! 
+     Distinctio enim tempore asperiores nemo maiores.</p>
 </div>
 </div>
+<div class="conhecimento">
+<div class="conhecimento-header">
+<i class="fab fa-css3-alt"></i>
+<h3>CSS</h3>
+</div> 
+<div class="conhecimento-text">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facere voluptate modi debitis 
+commodi dolorem, ullam quidem atque ipsam vitae minima! Vel quis earum necessitatibus labore provident 
+maxime voluptates mollitia?</p>
+</div>   
 </div>
+<div class="conhecimento">
+<div class="conhecimento-header">
+<i class="fas fa-pencil-alt"></i>
+<h3>Designer</h3>
+</div>
+<div class="conhecimento-text">
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque aperiam accusamus odio libero
+quo corrupti, optio vero numquam laudantium a! Atque veritatis sit autem eligendi similique laborum iste,
+consectetur sequi?</p>
+</div>
+</div>
+<div class="conhecimento">
+<div class="conhecimento-header">
+<i class="fab fa-js"></i>
+<h3>JavaScript</h3>
+</div>
+<div class="conhecimento-text">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vitae obcaecati quod quis dolores 
+consequuntur ab perspiciatis animi minus soluta ipsa harum sit aliquid, adipisci quidem sed odit maxime quasi!</p>
+</div>
+</div>
+<div class="conhecimento">
+<div class="conhecimento-header">
+<i class="fab fa-bootstrap"></i>
+<h3>Bootstrap</h3>
+</div>
+<div class="conhecimento-text">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nesciunt doloremque quia totam qui 
+    obcaecati illum eum optio provident sunt. Fugiat debitis iste temporibus atque, ipsum facere sint? Libero, 
+    cumque?</p>
+</div>
+</div>
+<div class="conhecimento">
+ <div class="conhecimento-header">
+<i class="fab fa-github"></i>
+<h3>Git e GitHub</h3>
+ </div>  
+ <div class="conhecimento-text">
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam officiis rerum in eius iste cum quo dicta. 
+    Quibusdam architecto praesentium voluptas, voluptatibus eum, assumenda iusto ea ipsum eligendi quisquam soluta!</p>
+ </div>
+</div>
+</div>
+</section>
 
-
+</div>
 </body>
+
+
 <script src="script.js"></script>
 
 
