--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <header>
     <div class="img-wrapper">
-    <img src="imagens/Capa.jpg" alt="">
+    <img src="imagens/Bruna2.png" alt="" width="500" height="700">
     </div>
    <div class="banner">
     <h1>Studio Bruna Ferreira</h1>
@@ -56,69 +56,117 @@
 <div class="conhecimentos">
 <div class="conhecimento">
 <div class="conhecimento-header">
-    <i class="fab fa-html5"></i>
-    <h3>HTML</h3>
+    <h3>Henna</h3>
 </div>
 <div class="conhecimento-text">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, est quia architecto
-     doloremque voluptatum eius repellendus minus totam fugit corrupti accusamus blanditiis saepe nobis! 
-     Distinctio enim tempore asperiores nemo maiores.</p>
+    <p>A sobrancelha de henna é um preenchimento para cobrir as falhas com tonalização 
+     na pele (henna),que é própria para sobrancelhas.</p>
 </div>
 </div>
 <div class="conhecimento">
 <div class="conhecimento-header">
-<i class="fab fa-css3-alt"></i>
-<h3>CSS</h3>
+<h3>Microblading</h3>
 </div> 
 <div class="conhecimento-text">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda facere voluptate modi debitis 
-commodi dolorem, ullam quidem atque ipsam vitae minima! Vel quis earum necessitatibus labore provident 
-maxime voluptates mollitia?</p>
+<p>Microblading é um procedimento semi-permanente para delinear a sobrancelha de forma simétrica ao formato do rosto.
+   A técnica é feita através de pequenas incisões fio a fio, para preencher falhas e remodelar o desenho da sobrancelha.</p>
 </div>   
 </div>
 <div class="conhecimento">
 <div class="conhecimento-header">
-<i class="fas fa-pencil-alt"></i>
-<h3>Designer</h3>
+<h3>Microblading</h3>
 </div>
 <div class="conhecimento-text">
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque aperiam accusamus odio libero
-quo corrupti, optio vero numquam laudantium a! Atque veritatis sit autem eligendi similique laborum iste,
-consectetur sequi?</p>
+<p>Microblading é um procedimento semi-permanente para delinear a sobrancelha de forma simétrica ao formato do rosto. 
+   A técnica é feita através de pequenas incisões fio a fio, para preencher falhas e remodelar o desenho da sobrancelha.</p>
 </div>
 </div>
 <div class="conhecimento">
 <div class="conhecimento-header">
-<i class="fab fa-js"></i>
-<h3>JavaScript</h3>
+<h3>Finalidade:</h3>
 </div>
 <div class="conhecimento-text">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos vitae obcaecati quod quis dolores 
-consequuntur ab perspiciatis animi minus soluta ipsa harum sit aliquid, adipisci quidem sed odit maxime quasi!</p>
+    <p>Pessoas que têm sobrancelhas ralas, finas, curtas, com falhas ou diferentes
+    umas das outras podem corrigi-las e realçá-las por meio da aplicação de henna.
+    </p>
 </div>
 </div>
 <div class="conhecimento">
 <div class="conhecimento-header">
-<i class="fab fa-bootstrap"></i>
-<h3>Bootstrap</h3>
+<h3>Fio a Fio</h3>
 </div>
 <div class="conhecimento-text">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, nesciunt doloremque quia totam qui 
-    obcaecati illum eum optio provident sunt. Fugiat debitis iste temporibus atque, ipsum facere sint? Libero, 
-    cumque?</p>
+<p>Como o próprio nome diz, os fios são desenhados um a um, imitando a grossura dos fios originais. 
+    A ideia é que este seja o resultado mais natural de todos. Ideal para quem não tem faltas muito
+     grandes, pois se não acaba sendo notado.</p>
 </div>
 </div>
 <div class="conhecimento">
  <div class="conhecimento-header">
-<i class="fab fa-github"></i>
-<h3>Git e GitHub</h3>
+<h3>Shadow Line</h3>
  </div>  
  <div class="conhecimento-text">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam officiis rerum in eius iste cum quo dicta. 
-    Quibusdam architecto praesentium voluptas, voluptatibus eum, assumenda iusto ea ipsum eligendi quisquam soluta!</p>
+<p>Fica mais natural que a micropigmentação e é indicada para quem tem poucas falhas. 
+   Ele deixa um efeito sombreado natural.</p>
  </div>
 </div>
+<div class="conhecimento-img-wrapper">
+<img src="imagens/Exemplo1.jpg" alt="">
 </div>
+<div class="conhecimento-img-wrapper2">
+    <img src="imagens/Exemplo2.jpg" alt="" width="284" height="177">
+</div>
+<div class="conhecimento-img-wrapper3">
+<img src="imagens/Exemplo3.jpg" alt="" width="284" height="177">
+</div>
+</div>
+<section class="sessao-projetos">
+ <div class="sessao-header">
+    <h1>Sobre</h1>
+ </div>   
+<div class="projetos">
+<div class="card">
+ <div class="card-img-wrapper">
+     <img src="imagens/projeto1.jpg" alt="">
+ </div>
+ <div class="card-info">
+     <h2>Beleza é o melhor investimento</h2>
+     <p>A modelagem das sobrancelhas é uma técnica que visa, através da retirada de pelos, modelar a sobrancelha.
+    Visando harmonizar a face com a estrutura anatômica da face e ao padrão estético desejado.</p>
+     <button>Saiba Mais</button>
+ </div>
+</div>
+<div class="card">
+<div class="card-img-wrapper">
+    <img src="imagens/projeto2.jpg" alt="">
+</div>
+<div class="card-info">
+    <h2>Processo de cicatrização</h2>
+    <p>Uma das coisas que mais assusta as nossas clientes são as crostas ou “descamação” do pigmento,
+     no entanto, realmente esta situação é normal, logo, não há razões para preocupação.</p>
+<button>Saiba Mais</button>
+</div>
+</div>
+<div class="card">
+<div class="card-img-wrapper">
+    <img src="imagens/projeto3.jpg" alt="">
+</div>
+<div class="card-info">
+    <h2>Cuidado com o barato</h2>
+    <p>A micropigmentação é um procedimento feito no rosto, então não dá para não se preocupar com a estética 
+    e qualidade do serviço. Além disso é algo permanente, então pense bastante antes de fazer a sua.</p>
+<button>Saiba Mais</button>
+
+</div>
+</div>   
+</div>
+
+</section>
+</div>
+
+
+
+
 </section>
 
 </div>
