--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 </div>
 <div class="conhecimento">
 <div class="conhecimento-header">
+<h2>Técnica:</h2>
 <h3>Fio a Fio</h3>
 </div>
 <div class="conhecimento-text">
@@ -103,7 +104,8 @@
 </div>
 <div class="conhecimento">
  <div class="conhecimento-header">
-<h3>Shadow Line</h3>
+ <h2>Técnica:</h2>    
+<h3>ShadowLine</h3>
  </div>  
  <div class="conhecimento-text">
 <p>Fica mais natural que a micropigmentação e é indicada para quem tem poucas falhas. 
