--- a/index.html
+++ b/index.html
@@ -165,11 +165,8 @@
 
 </section>
 </div>
-
-
-
-
 </section>
+
 
 <section class="sessao-contato">
 <div class="contato-wrapper">
@@ -196,6 +193,34 @@
     </form>
 </div>
 </div>
+</section>
+<section class="sessao-orcamento">
+    
+    <div class="orcamento-wrapper">
+        <h1>Faça um orçamento</h1>
+        <form>
+            <label for="qtde">Escolha a data do Mês</label>
+            <input type="number" min="1" name="qtde" id="dtde">
+            <label for="js">Preciso de um orçamento</label>
+            <input type="checkbox" name="js" id="js">
+            <label>Procedimento</label>
+            <div class="group-layout">
+                <div>
+                    <input type="radio" name="layout" id="layout-sim">
+                    <label for="layout-sim">Técnica Microblading: Fio a Fio</label>
+                </div>
+                <div>
+                    <input type="radio" name="layout" id="layout-nao">
+                    <label for="layout-nao">Técnica: Shadow Line</label>
+                </div>
+            </div>
+              <label for="prazo">Prazo</label>
+              <input type="range" name="prazo" id="prazo">
+              <button class="btn-btn-orcamento" type="submit">Enviar</button>
+        </form>
+      
+    </div>
+
 </section>
 
 </div>
