--- a/index.html
+++ b/index.html
@@ -29,17 +29,21 @@
    <div class="banner">
     <h1>Studio Bruna Ferreira</h1>
     <p>Especialista em Designer e Micropigmentação de Sobrancelhas.</p>
-    <button>Saiba mais</button>
+    <button value="Saibamais" onclick="saibamais()">Saiba mais</button>
 </div>
 </header>
 
 <aside class="sidebar">
 <nav>
 <ul class="menu2">
-<li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-<li class="menu-item"><a href="#" class="menu-link">Fotos</a></li>
-<li class="menu-item"><a href="#" class="menu-link">Vídeos</a></li>
-<li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
+<li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimentos</a></li>
+<li class="menu-item"><a href="#sobre" class="menu-link">Sobre</a></li>
+<li class="menu-item"><a href="#contato" class="menu-link" type="button" onclick="contato()">Contato</a></li>
+<li class="menu-item"><a href="#orcamento" class="menu-link" type="button" onclick="orcamento()">Orçamento</a></li>
+<li class="menu-item"><a href="#videos" class="menu-link" type="button" onclick="videos()">Vídeos</a></li>
+
+
+
 </ul>
 </nav>
 
@@ -49,7 +53,7 @@
 </div>
 </aside>
 
-<section class="sessao-conhecimentos">
+<section class="sessao-conhecimentos" id="conhecimentos">
 <div class="sessao-header">
     <h1>Conhecimentos</h1>
 </div>
@@ -122,7 +126,7 @@
 <img src="imagens/Exemplo3.jpg" alt="" width="284" height="177">
 </div>
 </div>
-<section class="sessao-projetos">
+<section class="sessao-projetos" id="sobre">
  <div class="sessao-header">
     <h1>Sobre</h1>
  </div>   
@@ -168,61 +172,23 @@
 </section>
 
 
-<section class="sessao-contato">
-<div class="contato-wrapper">
-<div class="contato-left">
-
-</div>
-<div class="contato-right">
-    <h1>Contato</h1>
-    <form>
-     <div class="input-group"> 
-     <input type="text" class="field" id="nome">
-     <label for="nome" class="field-label">Nome</label>
-    </div> 
-<div class="input-group">
-    <input type="text" class="field" id="email">
-    <label for="email" class="field-label">E-mail</label>
-</div>
-<div class="input-group">
-    <textarea class="field" id="mensagem"></textarea>
-    <label for="mensagem" class="field-label">Mensagem</label>
-</div>
-<button class="enviar" onclick="Enviar()">Enviar</button>
-<div id="res"></div>
-    </form>
+<footer>
+<div class="footer-content">
+<p>
+    Copyright &copy; 2020, WilsonJR - Todos os direitos reservados.
+</p>
+<div class="social-list">
+<ul>
+    <li><a href=""><i class="fab fa-facebook"></i></a></li>
+    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+    <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+</ul>
 </div>
 </div>
-</section>
-<section class="sessao-orcamento">
-    
-    <div class="orcamento-wrapper">
-        <h1>Faça um orçamento</h1>
-        <form>
-            <label for="qtde">Escolha a data do Mês</label>
-            <input type="number" min="1" name="qtde" id="dtde">
-            <label for="js">Preciso de um orçamento</label>
-            <input type="checkbox" name="js" id="js">
-            <label>Procedimento</label>
-            <div class="group-layout">
-                <div>
-                    <input type="radio" name="layout" id="layout-sim">
-                    <label for="layout-sim">Técnica Microblading: Fio a Fio</label>
-                </div>
-                <div>
-                    <input type="radio" name="layout" id="layout-nao">
-                    <label for="layout-nao">Técnica: Shadow Line</label>
-                </div>
-            </div>
-              <label for="prazo">Prazo</label>
-              <input type="range" name="prazo" id="prazo">
-              <button class="btn-btn-orcamento" type="submit">Enviar</button>
-        </form>
-      
-    </div>
-
-</section>
-
+</footer>
+<a href="" id="link-topo">
+<i class="fas fa-arrow-up"></i>
+</a>
 </div>
 </body>
 
