--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <li class="menu-item"><a href="#sobre" class="menu-link">Sobre</a></li>
 <li class="menu-item"><a href="#contato" class="menu-link" type="button" onclick="contato()">Contato</a></li>
 <li class="menu-item"><a href="#orcamento" class="menu-link" type="button" onclick="orcamento()">Orçamento</a></li>
+<li class="menu-item"><a href="#fotos" class="menu-link" type="button" onclick="fotos()">Fotos</a></li>
 <li class="menu-item"><a href="#videos" class="menu-link" type="button" onclick="videos()">Vídeos</a></li>
 
 
@@ -126,6 +127,8 @@
 <img src="imagens/Exemplo3.jpg" alt="" width="284" height="177">
 </div>
 </div>
+
+
 <section class="sessao-projetos" id="sobre">
  <div class="sessao-header">
     <h1>Sobre</h1>
