--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <div class="line" id="line3"></div>
 <div class="line" id="line4"></div>
 <div class="line" id="line5"></div>
-<span>Fechar</span>
+
+
 </div>
 
 
@@ -29,7 +30,7 @@
    <div class="banner">
     <h1>Studio Bruna Ferreira</h1>
     <p>Especialista em Designer e Micropigmentação de Sobrancelhas.</p>
-    <button value="Saibamais" onclick="saibamais()">Saiba mais</button>
+    <a href="videos/Saibamais.mp4"><button value="Saibamais" onclick="saibamais()">Saiba mais</button></a>
 </div>
 </header>
 
@@ -39,7 +40,6 @@
 <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimentos</a></li>
 <li class="menu-item"><a href="#sobre" class="menu-link">Sobre</a></li>
 <li class="menu-item"><a href="#contato" class="menu-link" type="button" onclick="contato()">Contato</a></li>
-<li class="menu-item"><a href="#orcamento" class="menu-link" type="button" onclick="orcamento()">Orçamento</a></li>
 <li class="menu-item"><a href="#fotos" class="menu-link" type="button" onclick="fotos()">Fotos</a></li>
 <li class="menu-item"><a href="#videos" class="menu-link" type="button" onclick="videos()">Vídeos</a></li>
 
@@ -49,8 +49,8 @@
 </nav>
 
 <div class="social-media">
-    <a href="#"><i class="fab fa-instagram "></i></a>
-    <a href="#"><i class="fab fa-whatsapp "></i></a>
+    <a href="https://www.instagram.com/designerbrunaferreira/"><i class="fab fa-instagram "></i></a>
+    <a href="https://api.whatsapp.com/send?phone=5521988447268"><i class="fab fa-whatsapp "></i></a>
 </div>
 </aside>
 
@@ -142,7 +142,7 @@
      <h2>Beleza é o melhor investimento</h2>
      <p>A modelagem das sobrancelhas é uma técnica que visa, através da retirada de pelos, modelar a sobrancelha.
     Visando harmonizar a face com a estrutura anatômica da face e ao padrão estético desejado.</p>
-     <button>Saiba Mais</button>
+     <a href="https://areademulher.r7.com/dicas-truques/design-de-sobrancelha/"><button>Saiba Mais</button></a>
  </div>
 </div>
 <div class="card">
@@ -153,7 +153,7 @@
     <h2>Processo de cicatrização</h2>
     <p>Uma das coisas que mais assusta as nossas clientes são as crostas ou “descamação” do pigmento,
      no entanto, realmente esta situação é normal, logo, não há razões para preocupação.</p>
-<button>Saiba Mais</button>
+<a href="http://portalantenados.com.br/noticia/261/sobrancelhas-sem-misterios-micropigmentacao-processo-de-cicatrizacao?print=1"><button>Saiba Mais</button></a>
 </div>
 </div>
 <div class="card">
@@ -164,7 +164,7 @@
     <h2>Cuidado com o barato</h2>
     <p>A micropigmentação é um procedimento feito no rosto, então não dá para não se preocupar com a estética 
     e qualidade do serviço. Além disso é algo permanente, então pense bastante antes de fazer a sua.</p>
-<button>Saiba Mais</button>
+<a href="https://delas.ig.com.br/beleza/2019-04-16/da-alergia-a-tinta-falsa-5-tentativas-de-fazer-as-sobrancelhas-que-deram-errado.html"><button>Saiba Mais</button></a>
 
 </div>
 </div>   
@@ -183,8 +183,8 @@
 <div class="social-list">
 <ul>
     <li><a href=""><i class="fab fa-facebook"></i></a></li>
-    <li><a href=""><i class="fab fa-instagram"></i></a></li>
-    <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+    <li><a href="https://www.instagram.com/designerbrunaferreira/"><i class="fab fa-instagram"></i></a></li>
+    <li><a href="https://api.whatsapp.com/send?phone=5521988447268"><i class="fab fa-whatsapp"></i></a></li>
 </ul>
 </div>
 </div>
